⚡pushing -> `pushing changes 09-04-24` | pushing PR..

--- a/.prettierrc.yaml
+++ b/.prettierrc.yaml
@@ -1,7 +1,8 @@
 # FILE: .prettierrc.yaml
 # ________________________________
-
-printWidth: 115
+plugins:
+  - prettier-plugin-tailwindcss # need to install `prettier-plugin-tailwindcss`
+printWidth: 102
 tabWidth: 2
 useTabs: false
 semi: true
