--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.1.5",
+    "@vue-youtube/core": "^0.0.6",
     "@vueuse/core": "^11.1.0",
     "pinia": "^2.2.4",
     "prettier-plugin-tailwindcss": "^0.6.8",
